[#170]refactor: 리뷰 Service 테스트 코드 리팩토링